--- a/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
@@ -3,8 +3,9 @@
 
         <div class="hijo_left" style="width:40%;">
             <label class="texto_labels" style="margin-top:10px;">Lista de entidades</label>
+            <input type="text" ng-model="vm.filtro" />
             <ul class="a_listado" style="width:100%;">
-                <li ng-repeat="entidad in vm.entidades">
+                <li ng-repeat="entidad in vm.entidades | filter:vm.filtro">
                     <input type="radio" class="styled" id="e_{{entidad.id}}" name="entidad_rad"
                            ng-value="vm.entidad"
                            ng-click="vm.seleccionarEntidad(entidad)" ng-disabled="vm.editando" />
