--- a/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
+++ b/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
@@ -158,13 +158,13 @@
                             <ul class="bar_filtrado">
                                 <li ng-click="vm.predicate = 'entidad.nombre'; vm.reverse= !vm.reverse;" ng-class="vm.predicate == 'entidad.nombre' ? 'active_filter':'' ">
                                     entidad
-                                    <span class="ico-sort-alpha-asc" ng-show="vm.predicate == 'entidad.nombre' && vm.reverse"></span>
-                                    <span class="ico-sort-alpha-desc" ng-show="vm.predicate == 'entidad.nombre' && !vm.reverse"></span>
+                                    <span class="ico-sort-alpha-asc" ng-show="vm.predicate == 'entidad.nombre' && !vm.reverse"></span>
+                                    <span class="ico-sort-alpha-desc" ng-show="vm.predicate == 'entidad.nombre' && vm.reverse"></span>
                                 </li>
                                 <li ng-click="vm.predicate = 'tipoDocumento.nombre'; vm.reverse= !vm.reverse;" ng-class="vm.predicate == 'tipoDocumento.nombre' ? 'active_filter':'' ">
                                     tipo Documento
-                                    <span class="ico-sort-alpha-asc" ng-show="vm.predicate == 'tipoDocumento.nombre' && vm.reverse"></span>
-                                    <span class="ico-sort-alpha-desc" ng-show="vm.predicate == 'tipoDocumento.nombre' && !vm.reverse"></span>
+                                    <span class="ico-sort-alpha-asc" ng-show="vm.predicate == 'tipoDocumento.nombre' && !vm.reverse"></span>
+                                    <span class="ico-sort-alpha-desc" ng-show="vm.predicate == 'tipoDocumento.nombre' && vm.reverse"></span>
                                 </li>
                                 <li ng-click="vm.predicate = 'numero'; vm.reverse= !vm.reverse;" ng-class="vm.predicate == 'numero' ? 'active_filter':'' ">
                                     numero
@@ -175,6 +175,9 @@
                                     Año publicación
                                     <span class="ico-sort-asc" ng-show="vm.predicate == 'anioPublicacion' && vm.reverse"></span>
                                     <span class="ico-sort-desc" ng-show="vm.predicate == 'anioPublicacion' && !vm.reverse"></span>
+                                </li>
+                                <li ng-click="vm.predicate = ''; vm.reverse = false;" ng-class="m.predicate == '' ? 'active_filter' : ''">
+                                    Relevancia
                                 </li>
                             </ul>
 
