--- a/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
@@ -13,7 +13,7 @@
             <!--<button class="a_boton a_block" type="button" ui-sref="gestion-documental.crear-documento.pergunta-anotacion">Siguiente</button>-->
         </form>
         <div class="contenedor_back_next">
-            <button class="btn_con_ico" ng-click="vm.aceptar()">
+            <button class="btn_con_ico" ui-sref="gestion-documental.crear-documento.informacion-documento">
                 <span class="ico-chevron-left tamano_botones_1"></span>Atras
             </button>
             <button class="btn_con_ico inverso" ng-click="vm.aceptar()">
