--- a/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
@@ -9,7 +9,7 @@
             <div class="a_1">
                 <label class="texto_labels" for="tipo-documento">Tipo de Documento:</label>
                 <div>
-                    <select id="tipo-documento" class="select" ng-options="tipo as tipo.nombre for tipo in vm.tiposDocumento | orderBy: 'nombre'" ng-model="vm.documento.tipoDocumento">
+                    <select id="tipo-documento" class="select" ng-options="tipo as tipo.nombre for tipo in vm.documento.entidad.tipoEntidad.documentosSoportados | orderBy: 'nombre'" ng-model="vm.documento.tipoDocumento">
                         <option ng-repeat="tipo in vm.tiposDocumento">{{ tipo.nombre }}</option>
                     </select>
                     <span class="span_select zzz ico-angle-down"></span>
@@ -35,12 +35,13 @@
 
         </form>
         <div class="contenedor_back_next">
-            <button class="btn_con_ico" ng-click="vm.aceptar()">
+            <button class="btn_con_ico" ui-sref="gestion-documental.crear-documento.subir-archivo">
                 <span class="ico-chevron-left tamano_botones_1"></span>Atras
             </button>
-            <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.asunto">
+            <button class="btn_con_ico inverso" ng-click="vm.validarDocumento()">
                 Siguiente<span class="ico-chevron-right tamano_botones_1 derecha"></span>
             </button>
         </div>
+        <p>{{ vm.error }}</p>
     </div>
 </div>
