--- a/WebLegemClient/src/css/pagina_principal.css
+++ b/WebLegemClient/src/css/pagina_principal.css
@@ -11,6 +11,7 @@
 
 body {
     background-image: url('../recursos/header/purty_wood.png');
+    background-image: url('../recursos/cheap_diagonal_fabric.png');
 }
 
 
