--- a/WebLegemClient/src/css/plantillas/header.css
+++ b/WebLegemClient/src/css/plantillas/header.css
@@ -13,9 +13,9 @@
 .figura_logo{
     height: 125px;
     width: 150px;
-    position:relative;
-    margin-left:10px; 
-    margin-top: -5px; 
+    position:absolute;
+    left:10px; 
+    top: -5px; 
     z-index:1;
     
     -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.85));
@@ -26,7 +26,7 @@
 .nombre_pagina {
     text-align:center;
     padding-bottom:40px;
-    font-family:'Century Gothic';
+    font-family:'OpenSans-Bold';
     font-weight:900;
     font-size: 100px;
     color:white;
