incluidos untracked files, values

--- a/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
+++ b/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
@@ -6,8 +6,8 @@
     <div id="tabContainer">
         <div id="tabs">
             <ul>
-                <li id="tabHeader_1" ng-click="vm.limpiar();vm.cambiarTab(1)">Busqueda Básica</li>
-                <li id="tabHeader_2" ng-click="vm.limpiar();vm.cambiarTab(2)">Busqueda Avanzada</li>
+                <li id="tabHeader_1" ng-click="vm.cambiarTab(1)">Busqueda Básica</li>
+                <li id="tabHeader_2" ng-click="vm.cambiarTab(2)">Busqueda Avanzada</li>
             </ul>
         </div>
 
