--- a/WebLegemClient/src/css/plantillas/login.css
+++ b/WebLegemClient/src/css/plantillas/login.css
@@ -23,7 +23,7 @@
 }
 
 .subtitulo > p{
-    font-family:'Arial Unicode MS';
+    font-family:'OpenSans';
     font-size:2rem;
     text-align:center;
     color: #444;
