--- a/WebLegemClient/src/css/plantillas/login.css
+++ b/WebLegemClient/src/css/plantillas/login.css
@@ -1,29 +1,29 @@
 ﻿.contenedor_login{
     width:420px;
     margin: 0 auto;
-    padding: 40px 0 0 0;
+    padding: 70px 0 0 0;
 }
 
-.contenedor_login:before {
-    content: '';
-    background-image: url('../../recursos/header/pexels-photo-46274 (2).jpeg');
-    background-size: cover;
-    -webkit-filter: brightness(80%);
-    filter: brightness(80%);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index:-1;
-}
+    .contenedor_login:before {
+        content: '';
+        background-image: url('../../recursos/header/paisaje.jpg');
+        background-size: 1400px;
+        -webkit-filter: brightness(100%);
+        filter: brightness(100%);
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+    }
 
 .subtitulo {
     background:transparent;
 }
 
 .subtitulo > p{
-    font-family:'Arial Unicode MS';
+    font-family:'OpenSans';
     font-size:2rem;
     text-align:center;
     color: #444;
