alinear botones + fuente legem

--- a/WebLegemClient/src/css/plantillas/informacion_documento.css
+++ b/WebLegemClient/src/css/plantillas/informacion_documento.css
@@ -35,6 +35,10 @@
     -ms-flex-direction: row;
     -webkit-flex-direction: row;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-end;
+}
+
+.contenedor_back_next button{
+    margin-right:10px;
 }
 
