--- a/WebLegemClient/src/css/plantillas/header.css
+++ b/WebLegemClient/src/css/plantillas/header.css
@@ -16,8 +16,7 @@
     position:absolute;
     left:10px; 
     top: -5px; 
-    z-index:1;
-    
+    z-index:1;    
     -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.85));
     filter        : drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.85));
 }
@@ -26,11 +25,11 @@
 .nombre_pagina {
     text-align:center;
     padding-bottom:40px;
-    font-family:'OpenSans-Bold';
-    font-weight:900;
+    font-family:'AbrilFatface-Regular';
+    margin-bottom:-80px;
     font-size: 100px;
     color:white;
-    text-shadow: 1px 1px  rgba(140,140,140,0.6), -1px -1px 1px rgba(0, 0, 0, .67);
+    text-shadow: 1px 1px 2px rgba(140,140,140,0.6), -1px -1px 3px rgba(0, 0, 0, .67);
 }
 
 .escudo_pagina{
