--- a/WebLegemClient/src/css/plantillas/header.css
+++ b/WebLegemClient/src/css/plantillas/header.css
@@ -23,10 +23,10 @@
 
 
 .nombre_pagina {
-    text-align:center;
-    padding-bottom:40px;
+    align-self:center;
+    padding-top:20px;
+    padding-bottom:30px;
     font-family:'AbrilFatface-Regular';
-    margin-bottom:-80px;
     font-size: 100px;
     color:white;
     text-shadow: 1px 1px 2px rgba(140,140,140,0.6), -1px -1px 3px rgba(0, 0, 0, .67);
