--- a/WebLegemClient/src/css/principal.css
+++ b/WebLegemClient/src/css/principal.css
@@ -1,26 +1,16 @@
-﻿.contenido_noticias {    
+﻿.contenido_principal {
     display: flex;
     -ms-flex-direction: column;
     -webkit-flex-direction: column;
     flex-direction: column;
-    min-height: 100vh;
+    min-height:100vh;
     position:absolute;
     top:0;
     width:100%;
-    flex:1;
 }
 
-.contenido_noticias > div{
-    display:flex;
-    flex-direction:column;
-    height:100%;
-}
-
-    .contenido_noticias:before {
+    .contenido_principal:before {
         content: '';
-        /*background-image: url('../recursos/header/paisaje.jpg');*/
-        /*background-imaget: url('../recursos/header/udenar_bloque.jpg');*/
-        /*background-image: url('../recursos/header/VIPRI-1.jpg');*/
         background-image: url('../recursos/header/VIPRI-12.jpg');
         background-size: cover;
         background-attachment: fixed;
@@ -31,3 +21,18 @@
         left: 0;
         z-index: -1;
     }
+
+.contenido_nombre_buscador {
+    padding-bottom:60px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+}
+
+.contenedor_simbolos{
+    align-items:flex-end; 
+    justify-content:flex-end; 
+    width:100%;
+}
