--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -33,19 +33,19 @@
 
             <div class="entidad_control" style="width:100%; margin-bottom:10px;">
                 <div style="background:#37404A;  height:40px; width:100%; word-spacing:-4px; padding:3px; border-top-left-radius:3px; border-top-right-radius:3px; ">
-                    <!--<div class="iconos_control" ng-click="vm.cambiar_vista_lista()"><span class="ico-align-justify"></span></div>-->
+                    <div class="iconos_control" ng-click="vm.cambiar_vista_lista()"><span class="ico-align-justify"></span></div>
                     <div class="iconos_control" ng-click="vm.cambiar_vista_bloque()"><span class="ico-th"></span></div>
                     <div class="iconos_control"><span class="ico-plus-circle"></span></div>
                 </div>
                 <div class="panel_control">
-                    <ul class="a_bloques">
-                        <li id="te_li_lista" ng-repeat="tipoDoc in vm.tiposDocumento | orderBy: 'nombre'">
+                    <ul class="a_bloques" ng-repeat="tipoDoc in vm.tiposDocumento | orderBy: 'nombre'">
+                        <li id="te_li_lista">
                             <input ng-disabled="!vm.editando" type="checkbox" name="check_name" ng-model="vm.tiposSoportados[$index]" id="chk-td-{{tipoDoc.id}}">
                             <label class="styled1 note rounded" for="chk-td-{{tipoDoc.id}}">
+                                <span class="escudo-udenar" style="font-size:60px;"> </span><!--Controlar tamaño con media query-->
                                 {{ tipoDoc.nombre }}
                             </label>
                         </li>
-
                     </ul>
                 </div>
             </div>
