--- a/WebLegemClient/src/css/plantillas/header.css
+++ b/WebLegemClient/src/css/plantillas/header.css
@@ -30,6 +30,7 @@
     font-size: 100px;
     color:white;
     text-shadow: 1px 1px 2px rgba(140,140,140,0.6), -1px -1px 3px rgba(0, 0, 0, .67);
+    cursor:default;
 }
 
 .escudo_pagina{
