--- a/WebLegemClient/src/css/plantillas/header2.css
+++ b/WebLegemClient/src/css/plantillas/header2.css
@@ -5,7 +5,6 @@
     display: -webkit-flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 2px solid #37404A;
-    background: #464d55;
-    background-image: url('../../recursos/header/dark_Tire.png');
+    border-bottom: 2px outset rgba(4, 28, 55, 0.55);
+    background: rgba(10, 40, 81, 0.71);
 }
