--- a/WebLegemClient/src/css/plantillas/news.css
+++ b/WebLegemClient/src/css/plantillas/news.css
@@ -93,7 +93,7 @@
     position:relative;
     width:300px;
     height:140px;
-    box-shadow: 0 0 1px #aaa,0 2px 2px #aaa;
+    box-shadow: 0 0 1px #888,0 1px 2px rgba(51, 51, 51, 0.3);
     font-family:'Lato-Regular';
     color:#555;
     margin-right:10px;
@@ -111,7 +111,6 @@
 .titulo_tarjeta{
     color:#eee;
     font-weight:bold;
-    vertical-align:middle;
     font-family:'OpenSans';
     padding:10px 20px;
     background:rgba(0, 169, 157, 0.6);
@@ -123,6 +122,7 @@
     font-size:small;
     font-family:'OpenSans';
     background:#eee;
+    height:100%;
 }
 
 .control_tarjeta{
