--- a/WebLegemClient/src/app/administracion/administracion.tmpl.html
+++ b/WebLegemClient/src/app/administracion/administracion.tmpl.html
@@ -1,4 +1,7 @@
 ﻿<div class="tapiz">
+    <div style="height:85px;">
+
+    </div>
     <div class="contenedor_administracion" ng-show="true">
         <label class="titulo">Administración</label>
         <div class="contenedor_tabs">
