--- a/WebLegemClient/src/css/plantillas/header2.css
+++ b/WebLegemClient/src/css/plantillas/header2.css
@@ -7,4 +7,7 @@
     align-items: center;
     border-bottom: 2px outset rgba(4, 28, 55, 0.55);
     background: rgba(10, 40, 81, 0.71);
+    top:55px;
+    position:fixed;
+    z-index:1;
 }
