--- a/WebLegemClient/src/css/plantillas/header.css
+++ b/WebLegemClient/src/css/plantillas/header.css
@@ -7,7 +7,8 @@
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.50);
     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.50);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.50);
-    z-index:1;
+    z-index:2;
+    position:fixed;
 }
 
 .figura_logo{
