--- a/WebLegemClient/src/css/plantillas/news.css
+++ b/WebLegemClient/src/css/plantillas/news.css
@@ -3,8 +3,7 @@
     width: 100%;
     background-image: url('../../recursos/header/VIPRI-1.jpg');
     background-image: url('../../recursos/header/beige_paper.png');
-    
-    background: height: 100vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     border-bottom: 5px solid #aaa;
