--- a/WebLegemClient/src/css/plantillas/news.css
+++ b/WebLegemClient/src/css/plantillas/news.css
@@ -57,22 +57,67 @@
 /*-----container news-----*/
 .container_news {
     height:70vh;
-    width: 100%;
     align-self:center;
     display:flex;
     flex-direction:column;
-    padding: 20px 120px 5px 120px;
+    flex-shrink:2;
+}
 
+    
+@media (min-width: 1200px) { 
+    .container_news {
+        width: 100%;
+    }
+    .tarjeta_news {
+        min-width:100px;
+        max-width:500px; 
+    }
+}
+
+@media (max-width: 1200px) { 
+    .container_news {
+    width: 100%;
+    }
+    .tarjeta_news {
+        min-width:100px;
+        max-width:500px; 
+    }
+}
+
+
+@media (max-width: 1100px) { 
+    .container_news {
+    width: 100%;
+    background:blue;
+    }
+    .tarjeta_news {
+        min-width:100px; 
+    }
+}
+
+@media (max-width: 800px) { 
+    .container_news {
+    width: 90%;
+    background:green;
+    }
+}
+
+@media (max-width: 600px) { 
+    .container_news {
+    width: 100%;
+    background:blue;
+    }
 }
 
 .news_left{
-    height:auto;
-    flex:3;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap; 
+    display:-webkit-flex;
+    display:flex;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
     overflow-y: auto;   
     margin:10px 0; 
+    justify-content:center;
+    justify-content:space-around;
 }
 
 
@@ -89,16 +134,18 @@
 
 /*--------  Tarjeta Noticias -------*/
 .tarjeta_news{
-    position:relative;
-    width:300px;
     height:140px;
     box-shadow: 0 0 1px #888,0 1px 2px rgba(51, 51, 51, 0.3);
     font-family:'Lato-Regular';
     color:#555;
-    margin-right:10px;
-    margin-left:2px;
-    margin-top:5px;
     overflow:hidden;
+    display: -webkit-flex;
+    display: flex;
+    flex-direction:column;
+    justify-content:center;
+    align-self:center;
+    margin:10px 10px;
+    
 }
 
 .tarjeta_news > hr{
