--- a/WebLegemClient/src/css/plantillas/news.css
+++ b/WebLegemClient/src/css/plantillas/news.css
@@ -145,7 +145,7 @@
     justify-content:center;
     align-self:center;
     margin:10px 10px;
-    
+    position: relative;
 }
 
 .tarjeta_news > hr{
