--- a/WebLegemClient/src/app/login/login.tmpl.html
+++ b/WebLegemClient/src/app/login/login.tmpl.html
@@ -1,7 +1,7 @@
 ﻿<div class="contenedor_login">
 
     <div>
-        <div class="titulo">WEBLEGEM</div>
+        <div class="titulo">LEGEM</div>
         <form class="form_login" name="form_login" novalidate>
 
             <div class="subtitulo">
