--- a/WebLegemClient/src/css/estilos_weblegem.css
+++ b/WebLegemClient/src/css/estilos_weblegem.css
@@ -5,13 +5,11 @@
     color: white;
     text-align:center;
     height:auto;
-    background: #11564c;   
+    background: rgb(60, 75, 86);  
     display:block;
     padding:0.5em;
-    font-family:sans-serif;
-    font-size:1.1em;
-    font-weight:600;
-    border-bottom:4px solid  #089672;
+    font-family:'OpenSans-Bold';
+    font-size:1em;
 }
 
 /*-------------------*/
@@ -19,7 +17,7 @@
 /*menesajes de validacion*/
 .a_validacion{
     color: orangered;
-    font-family:'Century Gothic';
+    font-family:'OpenSans';
     font-size:small;
 }
 
@@ -28,14 +26,14 @@
     display:block;
     color:#434e58;
     font-size:1em;
-    font-family:'Franklin Gothic';
+    font-family:'Lato-Regular';
 }
 
 .subtitulos_labels{
     display:block;
     color:#434e58;
     font-size:.9em;
-    font-family:'Franklin Gothic';
+    font-family:'Lato-Regular';
 }
 
 .divisor_gestion_documental{
