--- a/WebLegemClient/src/css/pagina_principal.css
+++ b/WebLegemClient/src/css/pagina_principal.css
@@ -1,6 +1,7 @@
 ﻿*{
     margin:0;
     padding:0;
+    border:none;
     -moz-box-sizing: border-box;
     -webkit-box-sizing:border-box;
     box-sizing: border-box; 
@@ -10,8 +11,7 @@
 }
 
 body {
-    background-image: url('../recursos/header/purty_wood.png');
-    background-image: url('../recursos/cheap_diagonal_fabric.png');
+    background-image: url('../recursos/header/beige_paper.png');
 }
 
 
