--- a/WebLegemClient/src/css/plantillas/administracion.css
+++ b/WebLegemClient/src/css/plantillas/administracion.css
@@ -1,8 +1,6 @@
 ﻿.contenedor_administracion {
     margin: 10px 0;
     width: 90vw;
-    border-radius: 5px;
-    background: #fff;
     -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
@@ -39,12 +37,7 @@
 
 .contenido{
     width:100%;
-    border-radius:0 0 5px 5px;
     background:#fff;    
-}
-
-.contenido > div{
-    padding:2em;
 }
 
 /*Control Administracion*/
@@ -54,9 +47,9 @@
     -ms-flex-direction: row;
     -webkit-flex-direction: row;
     flex-direction: row;
-    background:rgba(0, 0, 0, 0.05);
     justify-content: flex-end;
-    padding:10px;
+    margin:20px 0;
+    border-bottom:2px solid #ddd;
 }
 
 .control_administracion > button{
@@ -73,14 +66,11 @@
     -ms-flex-direction:column;
     -webkit-flex-direction:column;
     flex-direction:column;
-    padding:10px;
-    width:30%; 
+    padding:20px;
+    width:35%; 
     height:100%;
     background:rgba(0, 0, 0, 0.05);
-    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
-    
+    border-right:2px solid #ddd;
 }
 
 .hijo_right{
