--- a/WebLegemClient/src/css/plantillas/login.css
+++ b/WebLegemClient/src/css/plantillas/login.css
@@ -61,7 +61,7 @@
     position:absolute;
     display:flex;
     right: -5%;
-    top: 0;
+    top: 5px;
     width: 50px;
     height: 50px;
     justify-content:center;
@@ -88,7 +88,7 @@
 .olvide_contraseña{
     padding-top:20px;
     display:inline-block;
-    font-family: 'Century Gothic';
+    font-family: 'OpenSans';
     font-size:small;
 }
 
