--- a/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
@@ -5,12 +5,11 @@
             Asunto
         </label>
         <hr class="divisor_gestion_documental" />
+        <div style="display:flex;flex-direction:column; justify-content:center; text-align:center;">
+            <div class="loader" id="loader"></div>
+            <p class="texto_labels">Procesando archivo...</p>
+        </div>
         <form class="tontera">
-
-
-            <div id="contenedor">
-                <div class="loader" id="loader">Loading...</div>
-            </div>
 
             <ng-quill-editor ng-model="vm.documento.asunto" toolbar="true" link-tooltip="true" image-tooltip="true" toolbar-entries="font size bold list bullet italic underline strike align color background link image" editor-required="true" required="" error-class="input-error">
             </ng-quill-editor>
