--- a/WebLegemClient/src/css/plantillas/busqueda.css
+++ b/WebLegemClient/src/css/plantillas/busqueda.css
@@ -32,7 +32,7 @@
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	user-select: none;
-    font-family:'Century Gothic';
+    font-family:'Lato-Regular';
     font-size:small;    
     cursor:pointer;	
 }
