--- a/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
@@ -32,22 +32,21 @@
 
             <label class="texto_labels" for="nombre-entidad">Nombre de la entidad</label>
 
-            <input class="a_input input_administracion" style="width:99%;" id="nombre-entidad" type="text" ng-disabled="!vm.editando"
+            <input class="a_input input_administracion" style="width:95%;" id="nombre-entidad" type="text" ng-disabled="!vm.editando"
                     placeholder="Ingrese el nombre de la entidad" ng-model="vm.entidad.nombre" />
             
 
 
             <label class="texto_labels" for="tipo-entidad">Tipo de la entidad</label>
             <div class="span_select" style="width:100%;">
-                <input type="text" ng-show="!vm.editando" style="width:99%;" class="select"
+                <input type="text" ng-show="!vm.editando" style="width:95%;" class="select"
                        ng-disabled="!vm.editando"
                        ng-model="vm.entidad.tipoEntidad.nombre" />
             </div>
-            <div class="span_select">
-                <select id="tipoEntidadSelect" ng-show="vm.editando" class="select" ng-disabled="!vm.editando"
-                    ng-options="tipoEntidad as tipoEntidad.nombre for tipoEntidad in vm.tiposEntidad"
-                    ng-model="vm.tipoEntidad" >
-                </select>
+            <div class="span_select" style="width:95%;">
+                <select id=" tipoentidadselect" ng-show="vm.editando" class="select" style="width:95%;" ng-disabled=" !vm.editando"
+                        ng-options="tipoEntidad as tipoEntidad.nombre for tipoEntidad in vm.tiposEntidad"
+                        ng-model="vm.tipoEntidad"></select>
                 <span class="span_select ico-angle-down"></span>
             </div>
 
