--- a/WebLegemClient/src/css/plantillas/busqueda.css
+++ b/WebLegemClient/src/css/plantillas/busqueda.css
@@ -191,14 +191,14 @@
 }
 
 #titulo_bus{
-    color:#009900;
+    color:#fff;
     font-size:1em;
     font-family:'Lato-Regular';
     font-weight:bold;
     padding-bottom:5px;
 }
 #contenido_bus {
-    color: #000;
+    color: #224;
     font-family: 'Lato-Regular';
     font-size: .9em;
     text-align: justify;
@@ -213,13 +213,12 @@
 
 #entidad_bus:after, #fecha_bus:after{
     content:'|';
-    color:#757575;
+    color:#333;
     display:inline-block;
     white-space:nowrap; 
 }
 
 .res_bus > li{
-    border-bottom: 3px dotted rgba(100, 137, 0, 0.56) ;
     padding-bottom:10px;
     margin-bottom:30px;
 }
